--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pazdikan.party">
     <meta property="og:title" content="Pazdikan's website">
-    <meta property="og:description" content="About me and unnecessary things lmao.">
+    <meta property="og:description" content="About me and unnecessary things lmao. Can be difficult to read on mobile 😔">
     <meta property="og:image" content="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png">
-    <meta name="theme-color" content="#ffea67">
+    <meta name="theme-color" content="#5865F2">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png">
     <link rel="stylesheet" href="index.css">
