--- a/index.html
+++ b/index.html
@@ -1,96 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://pazdikan.party">
-    <meta property="og:title" content="Pazdikan's website">
-    <meta property="og:description" content="About me and unnecessary things lmao.">
-    <meta property="og:image"
-          content="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png">
-    <meta name="theme-color" content="#5e33ff">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
-    <script
-            src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
-    </script>
-    <link
-            rel="stylesheet"
-            href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pazdikan.party" />
+    <meta property="og:title" content="Pazdikan's website" />
+    <meta
+      property="og:description"
+      content="About me and unnecessary things lmao."
     />
-    <title>pazdikan.party › home page</title>
-<body>
+    <meta
+      property="og:image"
+      content="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png"
+    />
+    <meta name="theme-color" content="#5e33ff" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png"
+    />
 
+    <title>Home → pazdikan.party</title>
 
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #5e33ff;">
-    <a class="navbar-brand" href="#" onclick="changeTab('home')">pazdikan.party <a class="titleHeart" onclick="alert('you found a secret lmao')">❤</a></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.9/dist/sweetalert2.min.css"
+    />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div
+      data-spy="scroll"
+      data-target="#navbar"
+      data-offset="0"
+      class="content"
+    >
+      <div id="top">
+        <h1 class="title">
+          Hi, I'm
+          <span class="name">Michał</span>!
+        </h1>
+        <p class="shortabout">I like gaming, programming and music lol.</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="64"
+          height="64"
+          fill="currentColor"
+          class="
+            bi bi-arrow-down-circle-fill
+            animate__animated animate__shakeY animate__delay-5s
+          "
+          style="margin-top: 150px"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"
+          />
+        </svg>
+      </div>
+      <div id="about">
+        <div class="about about-l">
+          <h1 class="small-title">About my life 💀</h1>
+          I was born in Lodz and I grew up in Koluszki. When I was 7 we moved
+          out to the small village - Wytrzyszczki. I went to the worst school
+          you can imagine. Then I changed school again (3rd time). I lived with
+          my brother and my mom for 2 years. Then after that two years that I
+          don't wanna talk about, my family split into two parts. I moved out
+          with my dad to Ozorkow (near Wytrzyszczki). I passed the elementary
+          school (in Ozorkow, after changing the school 5th times). Then I moved
+          out with my dad back to Koluszki, to my grandma (my dad's mom) Now I
+          go to the cool technical school (IT). I'm also a big fan of music and
+          sometimes I like to record some dumb shit that I'll probably never
+          share anywhere. <br />Is my life crazy? Remember that I didn't tell
+          you the worst part :)
+        </div>
+        <div class="about about-r">
+          <h1 class="small-title">2nd panel</h1>
+          idk ill add something here Lorem ipsum dolor sit, amet consectetur
+          adipisicing elit. Obcaecati eaque dolorum tempore deleniti dolores
+          possimus quasi, dolorem est soluta repellat magni ullam reprehenderit
+          rem, odit aspernatur aut quas corrupti. Necessitatibus?
+        </div>
+      </div>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Socials</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="https://discord.gg/dXjUapMtsy" target="_blank">Discord</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="https://youtube.com/pazdikan" target="_blank">Youtube</a>
-                    <a class="dropdown-item" href="https://twitch.tv/pazdikan" target="_blank">Twitch</a>
-                    <a class="dropdown-item" href="https://twitter.com/pazdikan" target="_blank">Twitter</a>
-                    <a class="dropdown-item" href="https://github.com/pazdikan" target="_blank">Github</a>
-                </div>
-            <li class="nav-item active"><a class="nav-link" onclick="changeTab('activity')">Activity</a></li>
-        </ul>
+      <div id="projects"></div>
     </div>
-</nav>
-
-<div class="pazdikan-homeTab pazdikan-tab pazdikan-active">
-    <div class="aboutme">
-        <p class="aboutme-text"><span class="aboutme-title">About me</span><br>
-            Hi there! I'm Michał, some random Polish kid :D. I love programming and learning new things.<br><br>
-            Some random facts about me: I'm shy, I'm sometimes (always) stupid, I started around 10000000000 projects and I'll never finish them lmao.
-        </p>
-    </div>
-    <div class="aboutme">
-        <p class="aboutme-text"><span class="aboutme-title">Skills</span><br>
-            These "things" cannot be called skills. I'm still learning a lot of stuff and I still don't know a lot of stuff.
-            Also I'm programming for myself so my code is ugly af.<br><br>
-            HTML/EJS/CSS -> for web dev lmao.<br>
-            Javascript -> for web dev and basic node.js apps.<br>
-            Typescript -> for node.js apps.<br>
-            Java -> for minecraft plugins (still learning).<br>
-            Python -> Umm, it's trash but I know it.
-        </p>
-    </div>
-    <div class="aboutme">
-        <p class="aboutme-text"><span class="aboutme-title">Current projects</span><br>
-            I'm working on a minecraft plugins/servers series (e.g. top, new, trending, news, how to configure them, etc.).
-            You can join my Discord server and give me some suggestions/ideas :D
-        </p>
-    </div>
-</div>
-
-<div class="pazdikan-activityTab pazdikan-tab">
-    <p class="activity-title">Github commits</p>
-    <div class="calendar"></div>
-    <p class="activity-title">Last played</p>
-    <p align="center"><a href="https://spotify-github-profile.vercel.app/api/view?uid=7u1ityx4k5dpz30f4mgaxnwnj&amp;redirect=true" class="spotify-text"><img class="load-delay spotify" src="https://c.tenor.com/I6kN-6X7nhAAAAAj/loading-buffering.gif" data-original="https://spotify-github-profile.vercel.app/api/view?uid=7u1ityx4k5dpz30f4mgaxnwnj&amp;cover_image=true&amp;theme=novatorem" /></a></p>
-    <p class="spotifyComment">green = playing now</p>
-    <p class="activity-title">Recent YouTube video</p>
-    <p align="center" class="embedVideoP"><iframe class="latestVideoEmbed" vnum='0' cid="UCK08eZq3IsbAbzF0T6bs6xg" width="600" height="340" frameborder="0" allowfullscreen></iframe></p>
-</div>
-
-</body>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-<script src="index.js"></script>
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.9/dist/sweetalert2.all.min.js"></script>
+  <script src="index.js"></script>
 </html>
