Fixed mobile view and finished abouts.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Pazdikan's website" />
     <meta
       property="og:description"
-      content="About me and unnecessary things lmao."
+      content="Pazdikan's personal website. Some info about me, socials and more."
     />
     <meta
       property="og:image"
@@ -40,36 +40,53 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.9/dist/sweetalert2.min.css"
     />
     <link rel="stylesheet" href="index.css" />
+    <script
+      src="https://kit.fontawesome.com/8322e271ac.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div
-      data-spy="scroll"
-      data-target="#navbar"
-      data-offset="0"
-      class="content"
-    >
+    <div class="content">
       <div id="top">
+        <div class="socials delayFadeIn">
+          <a href="https://steamcommunity.com/id/pazdikan"
+            ><i class="fa-brands fa-steam"></i
+          ></a>
+
+          <a href="https://www.youtube.com/c/pazdikan"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+
+          <a href="https://www.twitch.tv/pazdikan"
+            ><i class="fa-brands fa-twitch"></i
+          ></a>
+
+          <a href="https://www.twitter.com/pazdikan"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+
+          <a href="https://www.discord.gg/dXjUapMtsy"
+            ><i class="fa-brands fa-discord"></i
+          ></a>
+
+          <a href="https://www.github.com/pazdikan"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
         <h1 class="title">
           Hi, I'm
           <span class="name">Michał</span>!
         </h1>
-        <p class="shortabout">I like gaming, programming and music lol.</p>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="64"
-          height="64"
-          fill="currentColor"
+        <p class="shortabout delayFadeIn">
+          I like gaming, programming and music lol.
+        </p>
+
+        <i
           class="
-            bi bi-arrow-down-circle-fill
-            animate__animated animate__shakeY animate__delay-5s
+            fa-solid fa-arrow-down
+            animate__animated animate__shakeY animate__delay-2s
           "
-          style="margin-top: 150px"
-          viewBox="0 0 16 16"
-        >
-          <path
-            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"
-          />
-        </svg>
+        ></i>
       </div>
       <div id="about">
         <div class="about about-l">
@@ -88,15 +105,88 @@
           you the worst part :)
         </div>
         <div class="about about-r">
-          <h1 class="small-title">2nd panel</h1>
-          idk ill add something here Lorem ipsum dolor sit, amet consectetur
-          adipisicing elit. Obcaecati eaque dolorum tempore deleniti dolores
-          possimus quasi, dolorem est soluta repellat magni ullam reprehenderit
-          rem, odit aspernatur aut quas corrupti. Necessitatibus?
+          <h1 class="small-title">My free time</h1>
+          I spend most of my free time in front of my computer. I like to play
+          games, watch movies, listen to music and play games. I sometimes read
+          books, but I don't like to read too much.
+        </div>
+        <div class="about about-l">
+          <h1 class="small-title">My Spotify stats</h1>
+          I listen music on Spotify every day for about 5-10 hours, depending on
+          school hours. I've liked 800 songs on Spotify, and that's about 20% of
+          all songs I like. <br />
+          <br />
+          <a
+            href="https://spotify-github-profile.vercel.app/api/view?uid=7u1ityx4k5dpz30f4mgaxnwnj&amp;redirect=true"
+            ><img
+              src="https://spotify-github-profile.vercel.app/api/view?uid=7u1ityx4k5dpz30f4mgaxnwnj&amp;cover_image=false&amp;theme=default"
+              alt="spotify-github-profile"
+          /></a>
+          <br />
+          <br />
+          According to <a href="https://spotistats.app/">Spotistats</a>, my top
+          artists for October are: <br />
+          1. Eminem<br />
+          <iframe
+            src="https://open.spotify.com/embed/artist/7dGJo4pcD2V6oG8kP0tJRR?utm_source=generator"
+            width="100%"
+            height="380"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          ></iframe>
+          <br />
+          2. REDZED <br />
+          <iframe
+            src="https://open.spotify.com/embed/artist/3FCo1sUkVbwKnO2m0Z7Bp9?utm_source=generator"
+            width="100%"
+            height="380"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          ></iframe>
+          <br />
+          3. hooligan chase <br />
+          <iframe
+            src="https://open.spotify.com/embed/artist/2qSWeggSfTTkTaF4t4WFpF?utm_source=generator"
+            width="100%"
+            height="380"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          ></iframe>
+          <br />
+          4. Witchouse 40k <br />
+          <iframe
+            src="https://open.spotify.com/embed/artist/7chdPv6Kx0frN0lKfppD2J?utm_source=generator"
+            width="100%"
+            height="380"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          ></iframe>
+          <br />
+          5. Warlord Colossus <br />
+          <iframe
+            src="https://open.spotify.com/embed/artist/5gYimn2wODaiKOTFJlzVnn?utm_source=generator"
+            width="100%"
+            height="380"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          ></iframe>
+          <br />
+          6. OmenXIII <br />
+          <iframe
+            src="https://open.spotify.com/embed/artist/760kxYHN5QTrD1DehiimjB?utm_source=generator"
+            width="100%"
+            height="380"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          ></iframe>
         </div>
       </div>
-
-      <div id="projects"></div>
     </div>
   </body>
   <script
