--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="about about-r">
           <h1 class="small-title">My free time</h1>
           I spend most of my free time in front of my computer. I like to play
-          games, watch movies, listen to music and play games. I sometimes read
+          games, watch movies, listen to music and chat on Discord. I sometimes read
           books, but I don't like to read too much.
         </div>
         <div class="about about-l">
