--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Pazdikan's website" />
     <meta
       property="og:description"
-      content="Pazdikan's personal website. Some info about me, socials and more."
+      content="Pazdikan's personal website. Some about me, socials and more."
     />
     <meta
       property="og:image"
@@ -44,14 +44,36 @@
       src="https://kit.fontawesome.com/8322e271ac.js"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/tippy.js@6/animations/scale.css"
+/>
   </head>
   <body>
     <div class="content">
       <div id="top">
         <div class="socials delayFadeIn">
+          <a href="https://www.github.com/pazdikan"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+
+        <a href="https://www.twitter.com/pazdikan"
+        > <i class="fa-brands fa-twitter"></i
+        ></a>
+
+        <a href="https://www.discord.gg/dXjUapMtsy"
+          ><i class="fa-brands fa-discord"></i
+        ></a>
+
           <a href="https://steamcommunity.com/id/pazdikan"
             ><i class="fa-brands fa-steam"></i
           ></a>
+
+          <a href="https://25karma.xyz/player/8d24090147734d16b29ed881f8f1adc5"
+          ><i class="fa-solid fa-cube"></i></a>
 
           <a href="https://www.youtube.com/c/pazdikan"
             ><i class="fa-brands fa-youtube"></i
@@ -60,25 +82,13 @@
           <a href="https://www.twitch.tv/pazdikan"
             ><i class="fa-brands fa-twitch"></i
           ></a>
-
-          <a href="https://www.twitter.com/pazdikan"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
-
-          <a href="https://www.discord.gg/dXjUapMtsy"
-            ><i class="fa-brands fa-discord"></i
-          ></a>
-
-          <a href="https://www.github.com/pazdikan"
-            ><i class="fa-brands fa-github"></i
-          ></a>
         </div>
         <h1 class="title">
           Hi, I'm
           <span class="name">Michał</span>!
         </h1>
         <p class="shortabout delayFadeIn">
-          I like gaming, programming and music lol.
+          Developer and gamer. Keep scrolling...
         </p>
 
         <i
@@ -90,101 +100,33 @@
       </div>
       <div id="about">
         <div class="about about-l">
-          <h1 class="small-title">About my life 💀</h1>
-          I was born in Lodz and I grew up in Koluszki. When I was 7 we moved
-          out to the small village - Wytrzyszczki. I went to the worst school
-          you can imagine. Then I changed school again (3rd time). I lived with
-          my brother and my mom for 2 years. Then after that two years that I
-          don't wanna talk about, my family split into two parts. I moved out
-          with my dad to Ozorkow (near Wytrzyszczki). I passed the elementary
-          school (in Ozorkow, after changing the school 5th times). Then I moved
-          out with my dad back to Koluszki, to my grandma (my dad's mom) Now I
-          go to the cool technical school (IT). I'm also a big fan of music and
-          sometimes I like to record some dumb shit that I'll probably never
-          share anywhere. <br />Is my life crazy? Remember that I didn't tell
-          you the worst part :)
+          <h1 class="small-title">I would love to work with you!</h1>
+          <p class="about-description-l">Contact me on Discord or Twitter (links at the top).</p>
+          If you need a spigot developer hit me up on Discord or Twitter. I can do whatever you want, price depends on the size of the plugin*<br>
+          *Not bytes, for example plugin with two commands don't cost as much as a whole custom minigame ;)
         </div>
+
+
         <div class="about about-r">
-          <h1 class="small-title">My free time</h1>
-          I spend most of my free time in front of my computer. I like to play
-          games, watch movies, listen to music and chat on Discord. I sometimes read
-          books, but I don't like to read too much.
-        </div>
-        <div class="about about-l">
-          <h1 class="small-title">My Spotify stats</h1>
-          I listen music on Spotify every day for about 5-10 hours, depending on
-          school hours. I've liked 800 songs on Spotify, and that's about 20% of
-          all songs I like. <br />
-          <br />
-          <a
-            href="https://spotify-github-profile.vercel.app/api/view?uid=7u1ityx4k5dpz30f4mgaxnwnj&amp;redirect=true"
-            ><img
-              src="https://spotify-github-profile.vercel.app/api/view?uid=7u1ityx4k5dpz30f4mgaxnwnj&amp;cover_image=false&amp;theme=default"
-              alt="spotify-github-profile"
-          /></a>
-          <br />
-          <br />
-          According to <a href="https://spotistats.app/">Spotistats</a>, my top
-          artists for October are: <br />
-          1. Eminem<br />
-          <iframe
-            src="https://open.spotify.com/embed/artist/7dGJo4pcD2V6oG8kP0tJRR?utm_source=generator"
-            width="100%"
-            height="380"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          ></iframe>
-          <br />
-          2. REDZED <br />
-          <iframe
-            src="https://open.spotify.com/embed/artist/3FCo1sUkVbwKnO2m0Z7Bp9?utm_source=generator"
-            width="100%"
-            height="380"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          ></iframe>
-          <br />
-          3. hooligan chase <br />
-          <iframe
-            src="https://open.spotify.com/embed/artist/2qSWeggSfTTkTaF4t4WFpF?utm_source=generator"
-            width="100%"
-            height="380"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          ></iframe>
-          <br />
-          4. Witchouse 40k <br />
-          <iframe
-            src="https://open.spotify.com/embed/artist/7chdPv6Kx0frN0lKfppD2J?utm_source=generator"
-            width="100%"
-            height="380"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          ></iframe>
-          <br />
-          5. Warlord Colossus <br />
-          <iframe
-            src="https://open.spotify.com/embed/artist/5gYimn2wODaiKOTFJlzVnn?utm_source=generator"
-            width="100%"
-            height="380"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          ></iframe>
-          <br />
-          6. OmenXIII <br />
-          <iframe
-            src="https://open.spotify.com/embed/artist/760kxYHN5QTrD1DehiimjB?utm_source=generator"
-            width="100%"
-            height="380"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          ></iframe>
+          <h1 class="small-title">Projects I worked on.</h1>
+          <p class="about-description-r">Click on projects to learn more on GitHub!<br>Empty or private repo means that i didn't finished it!</p>
+          <span style="font-size: 20px;">1. <a href="https://github.com/Pazdikan/skywars">Bukkit SkyWars Plugin</a> |</span><i class="fa-brands fa-java fa-xl"></i> <i class="fa-solid fa-faucet fa-xl"></i> <i class="fa-solid fa-database fa-xl mysql"></i><br> 
+          <a href="https://github.com/Pazdikan/skywars#features">• Features:</a><br>
+          Cosmetics<br>
+          Statistics<br>
+          MySQL database<br>
+          Party system<br>
+          Achievements<br>
+          Leveling rewards<br>
+          and more...<br><br><br>
+
+          <span style="font-size: 20px;">2. <a href="https://github.com/Pazdikan/pit">Hypixel's The Pit Recreation</a> |</span><i class="fa-brands fa-java fa-xl"></i> <i class="fa-solid fa-faucet fa-xl"></i> <i class="fa-solid fa-database fa-xl mysql"></i><br> 
+          <a href="https://github.com/Pazdikan/pit#features">• Features:</a><br>
+          Leveling and prestiges<br>
+          Statistics<br>
+          MySQL database<br>
+          Custom enchants<br>
+          and more...<br>
         </div>
       </div>
     </div>
