--- a/me/index.html
+++ b/me/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Page Information
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta charset="utf-8" />
-    <title>Pazdikan's Links</title>
-    <meta name="description" content="All my socials and projects!" />
-    <meta name="author" content="Pazdikan" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pazdikan.party/me" />
+    <meta property="og:title" content="Pazdikan's socials" />
+    <meta
+      property="og:description"
+      content="Almost every pazdikan's public account on the internet"
+    />
+    <meta
+      property="og:image"
+      content="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png"
+    />
+    <meta name="theme-color" content="#5e33ff" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png"
+    />
 
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -129,7 +140,7 @@
           <!-- Discord -->
           <a
             class="button button-discord"
-            href="https://dsc.gg/pazdikan"
+            href="https://dc.pazdikan.party"
             target="_blank"
             rel="noopener"
           >
@@ -960,15 +971,12 @@
           <br />
 
           <!-- Title -->
-          <h1>City of Dreams</h1>
+          <h1>Fixer Simulator</h1>
 
           <!-- Short Bio -->
           <p>
-            Drug Dealing Game, currently in developement after 2 months of
-            designing.
-            <br />
-            <br />
-            Also there will be devlogs on my YouTube, check up ☝
+            Currently in development. Watch devlogs on my YouTube and streams on
+            Twitch, check up ☝
           </p>
 
           <a
@@ -987,7 +995,7 @@
 
           <a
             class="button button-discord"
-            href="https://dsc.gg/pazdikan"
+            href="https://dc.pazdikan.party"
             target="_blank"
             rel="noopener"
           >
