--- a/setup/index.html
+++ b/setup/index.html
@@ -178,7 +178,7 @@
                   >Xbox Wireless Controller</a
                 >
               </td>
-              <td>Terrible don't buy pls</td>
+              <td>Works awesome and out of the box with Windows</td>
             </tr>
             <tr>
               <td class="xd">Speakers</td>
@@ -276,6 +276,13 @@
             </tr>
           </tbody>
         </table>
+      </div>
+      <div class="gridrow">
+        <h1>Desktop</h1>
+        <img
+          src="https://cdn.upload.systems/uploads/t6CitigU.png"
+          alt="Screenshot"
+        />
       </div>
     </div>
   </body>
