--- a/setup/index.html
+++ b/setup/index.html
@@ -49,20 +49,20 @@
               <td class="xd">CPU</td>
               <td class="xd">
                 <a href="https://www.amd.com/en/products/cpu/amd-ryzen-7-5800x"
-                  >Ryzen 7 5800X</a
+                  >Ryzen 5 5600x</a
                 >
               </td>
-              <td>Best AM4 I could get</td>
+              <td></td>
             </tr>
             <tr>
               <td class="xd">GPU</td>
               <td class="xd">
                 <a
-                  href="https://www.sapphiretech.com/en/consumer/pulse-radeon-rx-5600-xt-6g-gddr6"
-                  >Sapphire RX 5600 XT</a
+                  href="https://www.gigabyte.com/Graphics-Card/GV-N3070GAMING-OC-8GD-rev-10#kf"
+                  >Gigabyte RTX 3070</a
                 >
               </td>
-              <td>Terrible drivers, switching to RTX 3060 TI</td>
+              <td></td>
             </tr>
             <tr>
               <td class="xd">CPU Cooler</td>
